update docs for 0.9.46 release

--- a/_static/default.css
+++ b/_static/default.css
@@ -14,16 +14,16 @@
 /* -- page layout ----------------------------------------------------------- */
 
 body {
-    font-family: sans-serif;
+    font-family: ;
     font-size: 100%;
-    background-color: #11303d;
+    background-color: ;
     color: #000;
     margin: 0;
     padding: 0;
 }
 
 div.document {
-    background-color: #1c4e63;
+    background-color: ;
 }
 
 div.documentwrapper {
@@ -36,13 +36,13 @@ div.bodywrapper {
 }
 
 div.body {
-    background-color: #ffffff;
-    color: #000000;
+    background-color: ;
+    color: ;
     padding: 0 20px 30px 20px;
 }
 
 div.footer {
-    color: #ffffff;
+    color: ;
     width: 100%;
     padding: 9px 0 9px 0;
     text-align: center;
@@ -50,26 +50,26 @@ div.footer {
 }
 
 div.footer a {
-    color: #ffffff;
+    color: ;
     text-decoration: underline;
 }
 
 div.related {
-    background-color: #133f52;
+    background-color: ;
     line-height: 30px;
-    color: #ffffff;
+    color: ;
 }
 
 div.related a {
-    color: #ffffff;
+    color: ;
 }
 
 div.sphinxsidebar {
 }
 
 div.sphinxsidebar h3 {
-    font-family: 'Trebuchet MS', sans-serif;
-    color: #ffffff;
+    font-family: ;
+    color: ;
     font-size: 1.4em;
     font-weight: normal;
     margin: 0;
@@ -77,12 +77,12 @@ div.sphinxsidebar h3 {
 }
 
 div.sphinxsidebar h3 a {
-    color: #ffffff;
+    color: ;
 }
 
 div.sphinxsidebar h4 {
-    font-family: 'Trebuchet MS', sans-serif;
-    color: #ffffff;
+    font-family: ;
+    color: ;
     font-size: 1.3em;
     font-weight: normal;
     margin: 5px 0 0 0;
@@ -90,7 +90,7 @@ div.sphinxsidebar h4 {
 }
 
 div.sphinxsidebar p {
-    color: #ffffff;
+    color: ;
 }
 
 div.sphinxsidebar p.topless {
@@ -100,15 +100,15 @@ div.sphinxsidebar p.topless {
 div.sphinxsidebar ul {
     margin: 10px;
     padding: 0;
-    color: #ffffff;
+    color: ;
 }
 
 div.sphinxsidebar a {
-    color: #98dbcc;
+    color: ;
 }
 
 div.sphinxsidebar input {
-    border: 1px solid #98dbcc;
+    border: 1px solid ;
     font-family: sans-serif;
     font-size: 1em;
 }
@@ -118,12 +118,12 @@ div.sphinxsidebar input {
 /* -- hyperlink styles ------------------------------------------------------ */
 
 a {
-    color: #355f7c;
+    color: ;
     text-decoration: none;
 }
 
 a:visited {
-    color: #355f7c;
+    color: ;
     text-decoration: none;
 }
 
@@ -141,10 +141,10 @@ div.body h3,
 div.body h4,
 div.body h5,
 div.body h6 {
-    font-family: 'Trebuchet MS', sans-serif;
-    background-color: #f2f2f2;
+    font-family: ;
+    background-color: ;
     font-weight: normal;
-    color: #20435c;
+    color: ;
     border-bottom: 1px solid #ccc;
     margin: 20px -20px 10px -20px;
     padding: 3px 0 3px 10px;
@@ -158,14 +158,14 @@ div.body h5 { font-size: 110%; }
 div.body h6 { font-size: 100%; }
 
 a.headerlink {
-    color: #c60f0f;
+    color: ;
     font-size: 0.8em;
     padding: 0 4px 0 4px;
     text-decoration: none;
 }
 
 a.headerlink:hover {
-    background-color: #c60f0f;
+    background-color: ;
     color: white;
 }
 
@@ -219,8 +219,8 @@ p.admonition-title:after {
 
 pre {
     padding: 5px;
-    background-color: #eeffcc;
-    color: #333333;
+    background-color: ;
+    color: ;
     line-height: 120%;
     border: 1px solid #ac9;
     border-left: none;
@@ -246,7 +246,7 @@ th {
 }
 
 .viewcode-back {
-    font-family: sans-serif;
+    font-family: ;
 }
 
 div.viewcode-block:target {
